# FastAPITasData

./: .gitignore  README.md  pyproject.toml  setup.py
FastAPITasData.egg-info/: PKG-INFO  SOURCES.txt
data/: Australian_Marine_Parks.csv
src/: main.py
tests/: test_api.py
