# Environment dependencies
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Project dependencies
[project]
name = "marine_park_api"
authors = [
    {name = "Tom Galindo", email = "thommygalindo@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"
dependencies = [
    "pydantic",
    "pandas",
    "fastapi",
    "uvicorn",
    "pytest",
    "requests",
    "httpx",
]

# Server & dev optional dependencies
[project.optional-dependencies]
server = [
    "uvicorn[standard]",
]

# Command-line scripts - makes your app runnable after installation
[project.scripts]
run-marine-park-api = "main:cli_run"

# Project url
[project.urls]
Repository = "https://github.com/thommodin/FastAPITasData" # Github url
